payment/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-payment
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-payment
  template:
    metadata:
      labels:
        app: api-payment
    spec:
      containers:
        - name: api-payment
          image: dimaspratama04/api-payment:v1.0.1
          resources:
            limits: 
              cpu: "256m"
              memory: "512Mi"
          ports:
            - containerPort: 8081
