payment/deployment/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-payment
  namespace: backend
spec:
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: api-payment
